implemented some functions but I have issues with polymorphism

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(MonteCarloFrameWork)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(MonteCarloFrameWork main.cpp)
+add_executable(MonteCarloFrameWork main.cpp
+        src/random_number_generation/random_number_generators.hpp)
