--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(MonteCarloFrameWork)
 set(CMAKE_CXX_STANDARD 23)
 
 add_executable(MonteCarloFrameWork main.cpp
-        src/random_number_generation/random_number_generators.hpp)
+        src/random_number_generation/random_number_generators.hpp
+        src/sims/one_factor_monte_carlo.hpp)
