Added new framework for calulating expectation values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(MonteCarloFrameWork main.cpp
         src/random_number_generation/random_number_generators.hpp
-        src/sims/one_factor_monte_carlo.hpp)
+        src/sims/one_factor_monte_carlo.hpp
+        src/random_number_generation/distributions.hpp)
